@@ -5,6 +5,7 @@
 - added: `F.path.unlink(file/files, callback)`
 
 - updated: `F.http(mode, [options], [middleware(listen)])` added a new argument `middleware`
+- updated: `debug.js` now reads directories according to the config (author: @luoage)
 
 - fixed: `JSON` type in Total.js schemas
 - fixed: responding on `range` header
